--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -13,12 +13,15 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Install development dependencies
+RUN pip install --no-cache-dir black flake8 mypy pytest pytest-cov
+
 # Copy application code
 COPY . .
 
 # Expose port
 EXPOSE 8000
 
-# Run the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run the application with reload for development
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
